--- a/pipeline/kestra/02_postgres_taxi.yaml
+++ b/pipeline/kestra/02_postgres_taxi.yaml
@@ -1,7 +1,7 @@
 id: 02_postgres_taxi
 namespace: zoomcamp
 description: |
-  The CSV Data used in the course: https://github.com/DataTalksClub/nyc-tlc-data/releases
+  The CSV Data is used for this project.
 
 inputs:
   - id: taxi
